Fixing - Buy/sell after too small interval

--- a/static/style.css
+++ b/static/style.css
@@ -11,6 +11,10 @@
     border-radius: .25rem;
 }
 
+.pull-right {
+    float: right;
+}
+
 .bd-callout-danger {
     border-left-color: #d9534f;
 }
